Stop button shown with long press on the play/pause button
Long press on the play/pause button in the controls pane now shows a context
menu with the option "Stop". This is especially to enable stopping on
touch-only devices which have no HW media control keys or the shift button to
use keyboard shortcut.

On touch devices supporting it, there is also a small haptic feedback given
when the context menu opens. It helps to notice that the menu has opened as
the menu itself is often hidden by the user's finger. This seems to currently
work at least on Chrome for Android but not on Firefox for Android.

refs https://github.com/owncloud/music/issues/911

--- a/css/style-controls.css
+++ b/css/style-controls.css
@@ -7,7 +7,7 @@
  * @author Morris Jobke <hey@morrisjobke.de>
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Morris Jobke 2013, 2014
- * @copyright Pauli Järvinen 2017 - 2020
+ * @copyright Pauli Järvinen 2017 - 2021
  */
 
 #controls {
@@ -15,7 +15,7 @@
 	padding: 0 20px 0 20px;
 	top: 45px;
 	position: fixed;
-	overflow: hidden;
+	overflow: visible;
 }
 
 /* Rule used when collapsible navigation pane is open. In that case, #app-content is transformed
@@ -46,12 +46,17 @@ body:not(.snapjs-left) #controls.taller-header {
 }
 
 .control {
-	height: 52px;
-	width: 52px;
+	background-size: contain;
+	height: 32px;
+	width: 32px;
 	padding: 10px;
-	margin: 9px 2px 5px;
+	margin: 0 12px 15px;
 	cursor: pointer;
 	opacity: .4;
+}
+
+#play-pause-container {
+	position: relative;
 }
 
 #play-controls {
@@ -67,6 +72,12 @@ body:not(.snapjs-left) #controls.taller-header {
 
 #controls .control:hover, #controls .control:focus {
 	opacity: 1;
+}
+
+#controls #play-pause-menu,
+#controls #play-pause-menu::after /* the carret */ {
+	transform: translateX(50%);
+	right: 50% ;
 }
 
 #controls .albumart {
@@ -218,4 +229,16 @@ body:not(.snapjs-left) #controls.taller-header {
 
 :hover::-moz-range-thumb {
 	cursor: pointer;
+}
+
+.icon-play-big {
+	background-image: url(../img/play-big.svg);
+}
+
+.icon-pause-big {
+	background-image: url(../img/pause-big.svg);
+}
+
+.icon-stop {
+	background-image: url(../img/stop.svg);
 }
